<resources>
    <string name="app_name">XVX Video Player</string>
    <string name="admob_app_id">ca-app-pub-3940256099942544~3347511713</string>
    <string name="allow_permission">Allow storage permission to get all videos to enjoy!</string>
    <string name="allow_permission_title">Storage Permission</string>
    <string name="app_name_sort">XVX Video Player</string>
    <string name="bottomsheet_action_expand_halfway">Expand halfway</string>
    <string name="character_counter_content_description">Characters entered %1$d of %2$d</string>
    <string name="character_counter_overflowed_content_description">Character limit exceeded %1$d of %2$d</string>
    <string name="character_counter_pattern">%1$d/%2$d</string>
    <string name="chip_text">Chip text</string>
    <string name="clear_text_end_icon_content_description">Clear text</string>
    <string name="click_to_restart">Click to try again</string>
    <string name="common_google_play_services_unknown_issue">%1$s is having trouble with Google Play services. Please try again.</string>
    <string name="error_icon_content_description">Error</string>
    <string name="exposed_dropdown_menu_content_description">Show dropdown menu</string>
    <string name="file_name">File Name:</string>
    <string name="icon_content_description">Dialog Icon</string>
    <string name="icon_desc">Ad icon</string>
    <string name="image_desc">Ad image</string>
    <string name="item_view_role_description">Tab</string>
    <string name="material_clock_display_divider">:</string>
    <string name="material_clock_toggle_content_description">Select AM or PM</string>
    <string name="material_hour_selection">Select hour</string>
    <string name="material_hour_suffix">%1$s o\'clock</string>
    <string name="material_minute_selection">Select minutes</string>
    <string name="material_minute_suffix">%1$s minutes</string>
    <string name="material_slider_range_end">Range end,</string>
    <string name="material_slider_range_start">Range start,</string>
    <string name="material_timepicker_am">AM</string>
    <string name="material_timepicker_clock_mode_description">Switch to clock mode for the time input.</string>
    <string name="material_timepicker_hour">Hour</string>
    <string name="material_timepicker_minute">Minute</string>
    <string name="material_timepicker_pm">PM</string>
    <string name="material_timepicker_select_time">Select time</string>
    <string name="material_timepicker_text_input_mode_description">Switch to text input mode for the time input.</string>
    <string name="message_leave_video_player_screen">Are you sure you have to close this video ?</string>
    <string name="modify_date">Modify Date:</string>
    <string name="mtrl_badge_numberless_content_description">New notification</string>
    <string name="mtrl_chip_close_icon_content_description">Remove %1$s</string>
    <string name="mtrl_exceed_max_badge_number_content_description">More than %1$d new notifications</string>
    <string name="mtrl_exceed_max_badge_number_suffix">%1$d%2$s</string>
    <string name="mtrl_picker_a11y_next_month">Change to next month</string>
    <string name="mtrl_picker_a11y_prev_month">Change to previous month</string>
    <string name="mtrl_picker_announce_current_selection">Current selection: %1$s</string>
    <string name="mtrl_picker_cancel">@android:string/cancel</string>
    <string name="mtrl_picker_confirm">@android:string/ok</string>
    <string name="mtrl_picker_date_header_selected">%1$s</string>
    <string name="mtrl_picker_date_header_title">Select Date</string>
    <string name="mtrl_picker_date_header_unselected">Selected date</string>
    <string name="mtrl_picker_day_of_week_column_header">Column of days: %1$s</string>
    <string name="mtrl_picker_invalid_format">Invalid format.</string>
    <string name="mtrl_picker_invalid_format_example">Example: %1$s</string>
    <string name="mtrl_picker_invalid_format_use">Use: %1$s</string>
    <string name="mtrl_picker_invalid_range">Invalid range.</string>
    <string name="mtrl_picker_navigate_to_year_description">Navigate to year %1$s</string>
    <string name="mtrl_picker_out_of_range">Out of range: %1$s</string>
    <string name="mtrl_picker_range_header_only_end_selected">Start date – %1$s</string>
    <string name="mtrl_picker_range_header_only_start_selected">%1$s – End date</string>
    <string name="mtrl_picker_range_header_selected">%1$s – %2$s</string>
    <string name="mtrl_picker_range_header_title">Select Range</string>
    <string name="mtrl_picker_range_header_unselected">Start date – End date</string>
    <string name="mtrl_picker_save">Save</string>
    <string name="mtrl_picker_text_input_date_hint">Date</string>
    <string name="mtrl_picker_text_input_date_range_end_hint">End date</string>
    <string name="mtrl_picker_text_input_date_range_start_hint">Start date</string>
    <string name="mtrl_picker_text_input_day_abbr">d</string>
    <string name="mtrl_picker_text_input_month_abbr">m</string>
    <string name="mtrl_picker_text_input_year_abbr">y</string>
    <string name="mtrl_picker_toggle_to_calendar_input_mode">Switch to calendar input mode</string>
    <string name="mtrl_picker_toggle_to_day_selection">Tap to switch to selecting a day</string>
    <string name="mtrl_picker_toggle_to_text_input_mode">Switch to text input mode</string>
    <string name="mtrl_picker_toggle_to_year_selection">Tap to switch to selecting a year</string>
    <string name="no_url">No url</string>
    <string name="offline_notification_text">Tap to open ad</string>
    <string name="offline_notification_title">View the ad you saved when you were offline</string>
    <string name="offline_opt_in_confirm">OK</string>
    <string name="offline_opt_in_confirmation">You\'ll get a notification with the link when you\'re back online</string>
    <string name="offline_opt_in_decline">No thanks</string>
    <string name="offline_opt_in_message">We\'ll send you a notification with a link to the advertiser site.</string>
    <string name="offline_opt_in_title">Open ad when you\'re back online.</string>
    <string name="password_toggle_content_description">Show password</string>
    <string name="replay">Replay</string>
    <string name="s1">Save image</string>
    <string name="s2">Allow Ad to store image in Picture gallery?</string>
    <string name="s3">Accept</string>
    <string name="s4">Decline</string>
    <string name="s5">Create calendar event</string>
    <string name="s6">Allow Ad to create a calendar event?</string>
    <string name="s7">Test Ad</string>
    <string name="search_menu_title">Search</string>
    <string name="security_question1">What was your childhood nickname?</string>
    <string name="security_question10">In what city or town was your first job?</string>
    <string name="security_question2">What is your father name?</string>
    <string name="security_question3">What is your birth month?</string>
    <string name="security_question4">What is the name of your favorite childhood friend?</string>
    <string name="security_question5">What is your favorite actor?</string>
    <string name="security_question6">What is your favorite movie?</string>
    <string name="security_question7">What is your favorite star?</string>
    <string name="security_question8">What is your dream job?</string>
    <string name="security_question9">Who is your sports hero?</string>
    <string name="status_bar_notification_info_overflow">999+</string>
    <string name="tips_not_wifi">You are currently using the mobile network, the player will continue to consume traffic</string>
    <string name="tips_not_wifi_cancel">Stop play</string>
    <string name="tips_not_wifi_confirm">Resume</string>
    <string name="title_leave_video_player_screen">XVX Video Player</string>
    <string name="video_duration">Duration:</string>
    <string name="video_loading_failed">Video loading failed</string>
    <string name="video_path">File Path:</string>
    <string name="video_resolution">Resolution:</string>
    <string name="video_size">Size:</string>
    <string name="security_question">Security Question</string>
    <string name="noInternet">No internet connection.\nPlease turn on Mobile Data/WiFi.</string>
    <string name="download">Download</string>
    <string name="update_now">Update Now</string>
    <string name="ad_attribution">AD</string>
    <string name="no_data_available">No Games Available</string>
    <string name="game_status">Play the game to win it.</string>
    <string name="install">Install</string>
    <string name="action_allow">Allow Permissions</string>
    <string name="action_details">Properties</string>
    <string name="action_no">No</string>
    <string name="action_not_now">Not now</string>
    <string name="action_ok">OK</string>
    <string name="action_yes">Yes</string>
    <string name="rate_descp">Please Appreciate us by Rating this App. This won\'t take more than a minute. Thanks for your Support…</string>
    <string name="rate_title">Do you love this app?</string>
    <string name="rate_now">Rate Now</string>
    <string name="rate_later">Rate Later</string>
    <string name="albums">Albums</string>
    <string name="galleryVideos">Videos</string>
    <string name="share">Share</string>
    <string name="delete">Delete</string>
    <string name="delete_media">Delete?</string>
    <string name="filters">Filters</string>
    <string name="done">Done</string>
    <string name="save">Save</string>
    <string name="home_screen">Home screen</string>
    <string name="lock_screen">Lock screen</string>
    <string name="home_and_lock_screens">Home and lock\n screens</string>
    <string name="set_as_wallpaper">Set as wallpaper</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="isRTL">false</string>
    <string name="play_more_app">https://play.google.com/store/apps</string>
    <string name="image">Image</string>
    <string name="video">Video</string>
    <string name="rate_app">Rate App</string>
    <string name="more_app">More App</string>
    <string name="share_app">Share App</string>
    <string name="privacy_policy">Privacy Policy</string>
    <string name="exit">Exit</string>
    <string name="Please_click_BACK_again_to_exit">Please click BACK again to exit</string>
    <string name="Let_me_recommend_you_this_application">Let me recommend you this application</string>
    <string name="profile">profile</string>
    <string name="no_data">No Data Found</string>
    <string name="loading">Loading....</string>
    <string name="start">Start</string>
    <string name="next">Next</string>
    <string name="skip">Skip</string>
    <string name="pleas_allow_permission">Pleas allow permission</string>
    <string name="allow_permission1">Allow permission</string>
    <string name="intro_one">intro one</string>
    <string name="intro_two">intro two</string>
    <string name="choose_one">Choose one</string>
    <string name="exitNote">Do you want to exit the App?</string>
    <string name="Brooklyn">Brooklyn</string>
    <string name="Rosy">Rosy</string>
    <string name="Becky">Becky</string>
    <string name="Noora">Noora</string>
    <string name="Lana">Lana</string>
    <string name="Charlotte">Charlotte</string>
    <string name="Kairi">Kairi</string>
    <string name="Maria">Maria</string>
    <string name="Natalya">Natalya</string>
    <string name="Ruby">"Ruby"</string>
    <string name="Sarah">Sarah</string>
    <string name="details">Details</string>
    <string name="are_you_sure_want_to_exit">Are you sure want to exit?</string>
    <string name="qureka_banner_ttl"><![CDATA[Play Quiz & Win Upto 50,000 Coins]]></string>
    <string name="qureka_banner_desc">Your chance of winning is high here!</string>
    <string name="play_now">Play to Win</string>
    <string name="ad">AD</string>
</resources>