<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/ex_permission_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/app_background"
    android:orientation="vertical">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/iv_liner1"
        android:layout_marginBottom="@dimen/_70sdp"
        android:fontFamily="@font/lato_regular"
        android:gravity="center"
        android:text="@string/app_name"
        android:textColor="@color/white"
        android:textSize="25sp"
        android:textStyle="bold" />


    <LinearLayout
        android:id="@+id/iv_liner1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_centerInParent="true"
        android:gravity="center"
        android:orientation="vertical">

        <ImageView
            android:layout_width="wrap_content"
            android:layout_height="@dimen/_180sdp"
            android:layout_centerInParent="true"
            android:src="@drawable/lock" />

        <TextView
            style="@style/ListItemTitleStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_24sdp"
            android:gravity="center"
            android:text="@string/allow_permission_title"
            android:textColor="@color/white"
            android:textSize="16sp" />

        <TextView
            style="@style/ListItemSubTitleStyle1"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/_18sdp"
            android:gravity="center"
            android:text="@string/allow_permission"
            android:textColor="@color/white"
            android:textSize="@dimen/_12sdp" />
    </LinearLayout>

    <TextView
        android:id="@+id/btnAllow"
        android:layout_width="@dimen/_200sdp"
        android:layout_height="@dimen/_50sdp"
        android:layout_alignParentBottom="true"
        android:layout_marginStart="@dimen/_20sdp"
        android:layout_marginEnd="@dimen/_20sdp"
        android:layout_marginBottom="@dimen/_40sdp"
        android:background="@drawable/vp_bg_round_corner_color_primary"
        android:gravity="center"
        android:layout_centerHorizontal="true"
        android:shadowColor="@color/colorPrimary"
        android:shadowDx="2"
        android:shadowDy="2"
        android:shadowRadius="3"
        android:text="@string/action_allow"
        android:textColor="@color/white"
        android:textSize="16sp"
        android:textStyle="bold" />
</RelativeLayout>
