<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="60dp">

    <androidx.cardview.widget.CardView
        android:id="@+id/vp_card"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_centerVertical="true"
        android:layout_marginStart="15dp"
        app:cardCornerRadius="8dp"
        app:cardElevation="2dp">

        <ImageView
            android:id="@+id/vp_qurekaBannerImg"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:scaleType="fitXY"
            android:src="@drawable/vp_qureka_square" />
    </androidx.cardview.widget.CardView>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginStart="5dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="5dp"
        android:layout_toEndOf="@+id/vp_card"
        android:orientation="vertical"
        android:weightSum="2">

        <com.romainpiel.shimmer.ShimmerTextView
            android:id="@+id/vp_adTitle"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:gravity="center_vertical"
            android:text="@string/qureka_banner_ttl"
            android:textColor="@color/white"
            android:textSize="11sp"
            android:textStyle="bold"
            app:reflectionColor="@color/colorAccent1" />

        <TextView
            android:id="@+id/vp_adDesc"
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:text="@string/qureka_banner_desc"
            android:textColor="@color/white"
            android:textSize="10sp"
            tools:ignore="SmallSp" />
    </LinearLayout>

    <androidx.cardview.widget.CardView
        android:id="@+id/vp_actionBtn"
        android:layout_width="90dp"
        android:layout_height="match_parent"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="12dp"
        android:layout_marginEnd="10dp"
        android:layout_marginBottom="12dp"
        app:cardBackgroundColor="@color/colorAccent1"
        app:cardCornerRadius="10dp"
        app:cardElevation="5dp">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center"
            android:text="@string/play_now"
            android:textColor="@color/black" />
    </androidx.cardview.widget.CardView>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="2dp"
        android:layout_marginTop="2dp"
        android:layout_marginEnd="2dp"
        android:layout_marginBottom="2dp"
        android:background="@color/colorAccent1"
        android:paddingStart="2dp"
        android:paddingEnd="2dp"
        android:text="@string/ad"
        android:textColor="@color/black"
        android:textSize="8sp"
        tools:ignore="SmallSp" />

</RelativeLayout>