<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:id="@+id/vp_bottomSheet"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/vp_galley_bg_menu"
    android:fitsSystemWindows="true"
    android:gravity="center"
    android:orientation="vertical"
    app:behavior_hideable="true"
    app:behavior_peekHeight="84dp"
    app:layout_behavior="@string/bottom_sheet_behavior">

    <ImageView
        android:layout_width="36dp"
        android:layout_height="4dp"
        android:layout_marginTop="16dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/vp_galley_shape_menu_layout" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/vp_btnShareVideo"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/vp_galley_ripple_white"
            android:drawableStart="@drawable/vp_galley_ic_share"
            android:drawablePadding="5dp"
            android:layout_alignParentStart="true"
            android:padding="16dp"
            android:text="@string/share"
            android:textAlignment="textStart"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/vp_btnDeleteVideo"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_centerHorizontal="true"
            android:layout_height="wrap_content"
            android:background="@drawable/vp_galley_ripple_white"
            android:drawableStart="@drawable/vp_galley_ic_delete"
            android:drawablePadding="5dp"
            android:padding="16dp"
            android:text="@string/delete"
            android:textAlignment="center"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

        <androidx.appcompat.widget.AppCompatButton
            android:id="@+id/vp_btnDetails"
            style="?android:attr/borderlessButtonStyle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:background="@drawable/vp_galley_ripple_white"
            android:drawableStart="@drawable/vp_ic_photo_details"
            android:drawablePadding="5dp"
            android:padding="16dp"
            android:layout_alignParentEnd="true"
            android:text="@string/details"
            android:textAlignment="textEnd"
            android:textAllCaps="false"
            android:textColor="@android:color/white"
            android:textSize="16sp" />

    </RelativeLayout>
</LinearLayout>