<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="305dp"
    android:background="@drawable/vp_white_ad_border">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="60dp"
            android:orientation="horizontal">

            <androidx.cardview.widget.CardView
                android:id="@+id/vp_card"
                android:layout_width="40dp"
                android:layout_height="40dp"
                android:layout_centerVertical="true"
                android:layout_marginStart="15dp"
                app:cardBackgroundColor="@color/white"
                app:cardCornerRadius="8dp"
                app:cardElevation="2dp">

                <ImageView
                    android:id="@+id/vp_qurekaBannerImg"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:scaleType="fitXY"
                    android:src="@drawable/vp_qureka_square" />
            </androidx.cardview.widget.CardView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginStart="5dp"
                android:layout_marginTop="5dp"
                android:layout_marginEnd="10dp"
                android:layout_marginBottom="5dp"
                android:layout_toEndOf="@+id/vp_card"
                android:orientation="vertical"
                android:weightSum="2">

                <com.romainpiel.shimmer.ShimmerTextView
                    android:id="@+id/vp_adTitle"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:gravity="center_vertical"
                    android:text="@string/qureka_banner_ttl"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    android:textStyle="bold"
                    app:reflectionColor="@color/colorAccent1" />

                <TextView
                    android:id="@+id/vp_adDesc"
                    android:layout_width="match_parent"
                    android:layout_height="0dp"
                    android:layout_weight="1"
                    android:text="@string/qureka_banner_desc"
                    android:textColor="@color/white"
                    android:textSize="12sp"
                    tools:ignore="SmallSp" />
            </LinearLayout>

        </RelativeLayout>

        <ImageView
            android:id="@+id/qureka_native_img"
            android:layout_width="match_parent"
            android:layout_height="190dp"
            android:layout_marginStart="10dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            android:scaleType="fitXY"
            android:src="@drawable/vp_qureka_banner" />

        <androidx.cardview.widget.CardView
            android:id="@+id/vp_actionBtn"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_marginStart="10dp"
            android:layout_marginTop="5dp"
            android:layout_marginEnd="10dp"
            android:layout_marginBottom="5dp"
            app:cardBackgroundColor="@color/colorAccent1"
            app:cardCornerRadius="10dp"
            app:cardElevation="5dp">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:gravity="center"
                android:text="@string/play_now"
                android:textColor="@color/black" />
        </androidx.cardview.widget.CardView>

    </LinearLayout>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_alignParentEnd="true"
        android:layout_marginTop="3dp"
        android:layout_marginEnd="3dp"
        android:background="@color/colorAccent1"
        android:padding="2dp"
        android:text="@string/ad"
        android:textColor="@color/black"
        android:textSize="10sp"
        tools:ignore="SmallSp" />
</RelativeLayout>