<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:background="@drawable/vp_galley_bg_menu"
    android:gravity="center"
    android:orientation="vertical"
    android:padding="16dp">

    <ImageView
        android:layout_width="36dp"
        android:layout_height="4dp"
        android:layout_marginBottom="16dp"
        app:srcCompat="@drawable/vp_galley_shape_menu_layout" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:gravity="start"
        android:text="@string/set_as_wallpaper"
        android:textColor="@android:color/white" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="horizontal">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/vp_btnHome"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/vp_galley_shape_btn_set_wallpaper"
                    android:padding="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/vp_galley_ic_home"
                    app:tint="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/home_screen"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/vp_btnLock"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/vp_galley_shape_btn_set_wallpaper"
                    android:padding="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/vp_galley_ic_lock"
                    app:tint="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/lock_screen"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_weight="1">

            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true"
                android:gravity="center"
                android:orientation="vertical">

                <ImageButton
                    android:id="@+id/vp_btnHomeLock"
                    android:layout_width="50dp"
                    android:layout_height="50dp"
                    android:layout_marginBottom="8dp"
                    android:background="@drawable/vp_galley_shape_btn_set_wallpaper"
                    android:padding="10dp"
                    android:scaleType="centerCrop"
                    android:src="@drawable/vp_galley_ic_home_lock"
                    app:tint="@android:color/white" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:fontFamily="sans-serif-light"
                    android:gravity="center"
                    android:text="@string/home_and_lock_screens"
                    android:textColor="@android:color/white"
                    android:textSize="12sp" />

            </LinearLayout>

        </RelativeLayout>


    </LinearLayout>


</LinearLayout>